<resources>
    <string name="app_name">Github User\'s</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="share_this_account">Share this account</string>
    <string name="nama_user">Nama User</string>
    <string name="username_upper_case">Username</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="nama_upper_case">Nama</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="data_user_tidak_berhasil_ditemukan_silahkan_gunakan_kata_kunci_lain">Data user tidak berhasil ditemukan. Silahkan gunakan kata kunci lain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_username">Search for username</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="repository">Repository</string>
    <string name="search">Search</string>
    <string name="selected_user">Follower with username: </string>
    <string name="favorite_this_account">Favorite This Account</string>
    <string name="favorite_this_user">Add to Favorite</string>
    <string name="unfavorite_this_user">Remove from Favorite</string>
    <string name="favorite">favorite</string>
    <string name="favorite_upper">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="by_zuhal_alimul_hadi">By: Zuhal \'Alimul Hadi</string>
    <string name="error_msg">Terjadi kesalahan, silakan coba lagi nanti</string>
    <string name="detail">Detail</string>
    <string name="choose">You choose</string>
    <string name="mistake">Terjadi kesalahan</string>
</resources>